Messages per day/week/month became more similar, refactored object with current date information
* and other small fixes